# wxai-langchain

./: README.md  pyproject.toml
examples/: wxai_langchain_interface.ipynb
examples/0.0.2/: wxai_langchain_interface.ipynb
examples/0.0.3/: langchain-interface.py  prompt-template.py
src/wxai_langchain/: __init__.py  credentials.py  llm.py
src/wxai_langchain/extensions/langchain/: llm.py  prompt.py
